[package]
name = "here"
version = "1.0.0"
authors = ["Brendan McGloin <stmonkeydoom@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A simple rust macro to print the current file and line number."
homepage = "https://github.com/russells-crockpot/here"
repository = "https://github.com/russells-crockpot/here"
readme = "README.md"
documentation = "https://docs.rs/here/"

[dependencies]
log = { version = "0.4.14", optional = true }

